<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" tools:ignore="MissingTranslation">608258243112591</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb608258243112591</string>
    <string name="app_name">Quiz</string>
    <string name="languages_title">Languages </string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="guest_button">Play as Guest</string>
    <string name="sign_in_button">Sign In</string>
    <string name="login_with_facebook_button">Login with Facebook</string>
    <string name="login_with_google_button">Login with Google</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="sign_up_link">Don\'t have an account? Sign up</string>
    <string name="todo4">TODO</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="email">Email</string>
    <string name="todo5">TODO</string>
    <string name="password1">Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="email1">Email</string>
    <string name="settings">Settings</string>
    <string name="trivia_quiz_title">TRIVIA QUIZ</string>
    <string name="username">username</string>
    <string name="todo7">TODO</string>
    <string name="world_rank">World rank</string>
    <string name="play">Play</string>
    <string name="questions_number" translatable="false">1/10</string>
    <string name="todo8" translatable="false">TODO</string>
    <string name="answer_1" translatable="false"></string>
    <string name="answer_2" translatable="false"></string>
    <string name="question" translatable="false"></string>
    <string name="timer" translatable="false">20</string>
    <string name="answer_3" translatable="false"></string>
    <string name="answer_4" translatable="false"></string>
    <string name="num_of_lives" translatable="false">3</string>
    <string name="signUp_username">Username</string>
    <string name="play_again">Play Again</string>
    <string name="menu">Menu</string>
    <string name="the_end">Congrats! \n You finished the game!</string>
    <string name="score">Your score: </string>
    <string name="try_again">try again</string>
    <string name="game_over_text">GAME OVER \n Better luck next time!</string>
    <string name="time_s_up">Time\'s Up</string>
    <string name="score2">Score</string>
    <string name="notification_title" translatable="false">notification title</string>
    <string name="notification_msg" translatable="false">Message</string>
    <string name="suggest">Suggest us a question!</string>
    <string name="enter_question">Enter a question</string>
    <string name="enter_answers">Enter multiple answers</string>
    <string name="enter_right_answer">Enter the right answer number</string>
    <string name="suggest_button">Suggest</string>
    <string name="answer2">Answer 2</string>
    <string name="question_et">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer3">Answer 3</string>
    <string name="right_answer">Right Answer</string>
    <string name="answer4">Answer 4</string>
    <string name="todo10" translatable="false">TODO</string>
    <string name="todo11" translatable="false">TODO</string>
    <string name="todo12" translatable="false">TODO</string>
    <string name="todo13" translatable="false">TODO</string>
    <string name="list_of_suggested_questions">List of suggested questions</string>
    <string name="todo14" translatable="false">TODO</string>
    <string name="todo16" translatable="false">TODO</string>
    <string name="logout">Logout</string>
    <string name="todo17" translatable="false">TODO</string>
    <string name="todo18" translatable="false">TODO</string>
    <string name="todo19" translatable="false">TODO</string>
    <string name="todo20" translatable="false">TODO</string>
    <string name="todo21" translatable="false">TODO</string>
    <string name="todo22" translatable="false">TODO</string>
    <string name="todo23" translatable="false">TODO</string>
    <string name="question_setText">Question:</string>
    <string name="a_setText">A:</string>
    <string name="b_setText">B:</string>
    <string name="c_setText">C:</string>
    <string name="d_setText">D:</string>
    <string name="rA_setText">Right answer:</string>
    <string name="scoreboard" translatable="false">Scoreboard</string>
    <string name="info">For any problems or information \n contact us at: contact@triviaquiz.com</string>
</resources>
