<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestAQuestion">

    <TextView
        android:id="@+id/enter_question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:elevation="100dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/enter_question"
        android:textColor="#38D5FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_question_editText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:hint="@string/question_et"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_question_title" />

    <TextView
        android:id="@+id/enter_answers_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/enter_answers"
        android:textColor="#38D5FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_question_editText" />

    <EditText
        android:id="@+id/answer1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/answer1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_answers_title" />

    <EditText
        android:id="@+id/answer2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:elevation="100dp"
        android:hint="@string/answer2"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer1" />

    <EditText
        android:id="@+id/answer3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:elevation="100dp"
        android:hint="@string/answer3"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer2" />

    <EditText
        android:id="@+id/answer4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/answer4"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer3" />

    <TextView
        android:id="@+id/enter_right_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/enter_right_answer"
        android:textColor="#38D5FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer4" />

    <EditText
        android:id="@+id/enter_right_answer_editText"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:hint="@string/right_answer"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_right_answer" />

    <Button
        android:id="@+id/suggest_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#38D5FF"
        android:text="@string/suggest_button"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_right_answer_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>