<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/questions_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="7dp"
            android:text="@string/questions_number"
            android:textColor="#fff"
            android:textSize="19.5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lives_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="26dp"
            android:padding="7dp"
            android:text="@string/num_of_lives"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="9.8dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/heart"
            android:contentDescription="@string/todo8" />

    </FrameLayout>

    <TextView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="start"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/question"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/questions" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questions">

        <Button
            android:id="@+id/answer1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button6"
            android:text="@string/answer_1"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/answer2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button6"
            android:text="@string/answer_2"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/answer3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:background="@drawable/custom_button6"
            android:text="@string/answer_3"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/answer4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="240dp"
            android:background="@drawable/custom_button6"
            android:text="@string/answer_4"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>